@@ -159,6 +159,7 @@ t/0617_Dialog_Scan_Sane.t
 t/0618_Dialog_Scan_Sane.t
 t/06190_Dialog_Scan_Sane.t
 t/06191_Dialog_Scan_Sane.t
+t/06192_Dialog_Scan_Sane.t
 t/0621_Dialog_Scan_CLI.t
 t/0622_Dialog_Scan_CLI.t
 t/0623_Dialog_Scan_CLI.t
@@ -167,7 +168,8 @@ t/0625_Dialog_Scan_CLI.t
 t/0626_Dialog_Scan_CLI.t
 t/0627_Dialog_Scan_CLI.t
 t/0628_Dialog_Scan_CLI.t
-t/0629_Dialog_Scan_CLI.t
+t/06290_Dialog_Scan_CLI.t
+t/06292_Dialog_Scan_CLI.t
 t/07_Dialog_Renumber.t
 t/081_Frontend_CLI.t
 t/0821_Frontend_Sane.t
