@@ -1,6 +1,7 @@
 gscan2pdf (1.3.9-1) unstable; urgency=low
 
   * New upstream release
+    Closes: #815552 (fails to set geometry when loading saved profile)
 
  --
 
